Fix contrast issues with logo

--- a/index.css
+++ b/index.css
@@ -99,7 +99,7 @@ body {
 .contact p {
   font-weight: 400;
   font-size: 20px;
-  line-height: 28px;
+  line-height: 1.5;
   color: #ebebff;
   margin-bottom: 20px;
 }
@@ -202,18 +202,21 @@ body {
   margin-bottom: 12px;
 }
 
-.first-wrapper p {
+p {
   padding: 0;
   margin: 0 0 12px 0;
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   color: #344563;
 }
 
-.language-section > ul > li > div p {
+.language-section > ul > li > div h2 {
   margin: 0;
   padding: 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 .content button:disabled,
@@ -427,7 +430,7 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  color: #6070ff;
+  color: #0d1da9;
   justify-content: space-between;
 }
 
